--- a/teams.html
+++ b/teams.html
@@ -200,17 +200,21 @@
     </div>
     <footer class="social-footer">
         <div class="container">
-            <div class="row">
-                <div class="col-lg">
-                    <img src="images/Facebook.png">
-                </div>
-                <div class="col-lg">
-                    <img src="images/Instagram.png">
-                </div>
-                <div class="col-lg">
-                    <img src="images/twitter.png">
-                </div>
+            <div class="github-link">
+                <a class="github" href="https://github.com/natebennett1/creative-project1" style="color: black"; >Github Repository</a>
             </div>
+            <!-- <div class="row">
+                <div class="col-lg">
+                    <img class="img1" src="images/Facebook.png">
+                </div>
+                <div class="col-lg">
+                    <img class="img1" src="images/Instagram.png">
+                </div>
+                <div class="col-lg">
+                    <img class= "img1" src="images/twitter.png">
+                    </div>
+                </div>
+            </div> -->
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
