--- a/teams.html
+++ b/teams.html
@@ -201,7 +201,7 @@
     <footer class="social-footer">
         <div class="container">
             <div class="github-link">
-                <a class="github" href="https://github.com/natebennett1/creative-project1" style="color: black"; >Github Repository</a>
+                <a class="github" href="https://github.com/natebennett1/creative-project1" style="color: black"; >Github Repository - Nate Bennett & Dillon Ormond</a>
             </div>
             <!-- <div class="row">
                 <div class="col-lg">
