--- a/teams.html
+++ b/teams.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>D&N Football Reference</title>
+    <title>D&N Sports Reference</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script charset="utf-8" src="js/app.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -29,179 +29,16 @@
         </div>
     </nav>
     <div display='flex' ; flex-direction='row'>
-        <img class = "landscape" src="images/stadium2.jpg">
-        <h1>The AP Top 25</h1>
-
+        <img class="landscape" src="images/stadium2.jpg">
+        <h1>NBA Team Information</h1>
         <!-- grid -->
-        <div>
-            
-        <table class= "center">
-            <tr>
-                <th class="top25h">Ranking</th>
-                <th class="top25h">Team</th>
-                <th class="top25h">Record</th>
-                <th class="top25h">Previous Ranking</th>
-            </tr>
-            <tr>
-                <td class="top25b">1. </td>
-                <td class="top25b">Alabama</td>
-                <td class="top25b">3-0</td>
-                <td class="top25b">1</td>
-            </tr>
-            <tr>
-                <td class="top25a">2. </td>
-                <td class="top25a">Georgia</td>
-                <td class="top25a">3-0</td>
-                <td class="top25a">2</td>
-            </tr>
-            <tr>
-                <td class="top25b">3. </td>
-                <td class="top25b">Oregon</td>
-                <td class="top25b">3-0</td>
-                <td class="top25b">4</td>
-            </tr>
-            <tr>
-                <td class="top25a">4. </td>
-                <td class="top25a">Oklahoma</td>
-                <td class="top25a">3-0</td>
-                <td class="top25a">3</td>
-            </tr>
-            <tr>
-                <td class="top25b">5. </td>
-                <td class="top25b">Iowa</td>
-                <td class="top25b">3-0</td>
-                <td class="top25b">5</td>
-            </tr>
-            <tr>
-                <td class="top25a">6. </td>
-                <td class="top25a">Penn State</td>
-                <td class="top25a">3-0</td>
-                <td class="top25a">10</td>
-            </tr>
-            <tr>
-                <td class="top25b">7. </td>
-                <td class="top25b">Texas A&M</td>
-                <td class="top25b">3-0</td>
-                <td class="top25b">7</td>
-            </tr>
-            <tr>
-                <td class="top25a">8. </td>
-                <td class="top25a">Cincinnati</td>
-                <td class="top25a">3-0</td>
-                <td class="top25a">8</td>
-            </tr>
-            <tr>
-                <td class="top25b">9. </td>
-                <td class="top25b">Clemson</td>
-                <td class="top25b">2-1</td>
-                <td class="top25b">6</td>
-            </tr>
-            <tr>
-                <td class="top25a">10. </td>
-                <td class="top25a">Ohio State</td>
-                <td class="top25a">2-1</td>
-                <td class="top25a">9</td>
-            </tr>
-            <tr>
-                <td class="top25b">11. </td>
-                <td class="top25b">Florida</td>
-                <td class="top25b">2-1</td>
-                <td class="top25b">11</td>
-            </tr>
-            <tr>
-                <td class="top25a">12. </td>
-                <td class="top25a">Notre Dame</td>
-                <td class="top25a">3-0</td>
-                <td class="top25a">12</td>
-            </tr>
-            <tr>
-                <td class="top25b">13. </td>
-                <td class="top25b">Ole Miss</td>
-                <td class="top25b">3-0</td>
-                <td class="top25b">17</td>
-            </tr>
-            <tr>
-                <td class="top25a">14. </td>
-                <td class="top25a">Iowa State</td>
-                <td class="top25a">2-1</td>
-                <td class="top25a">14</td>
-            </tr>
-            <tr>
-                <td class="top25b">15. </td>
-                <td class="top25b">BYU</td>
-                <td class="top25b">3-0</td>
-                <td class="top25b">23</td>
-            </tr>
-            <tr>
-                <td class="top25a">16. </td>
-                <td class="top25a">Arkansas</td>
-                <td class="top25a">3-0</td>
-                <td class="top25a">20</td>
-            </tr>
-            <tr>
-                <td class="top25b">17. </td>
-                <td class="top25b">Coastal Carolina</td>
-                <td class="top25b">3-0</td>
-                <td class="top25b">16</td>
-            </tr>
-            <tr>
-                <td class="top25a">18. </td>
-                <td class="top25a">Wisconsin</td>
-                <td class="top25a">1-1</td>
-                <td class="top25a">18</td>
-            </tr>
-            <tr>
-                <td class="top25b">19. </td>
-                <td class="top25b">Michigan</td>
-                <td class="top25b">3-0</td>
-                <td class="top25b">25</td>
-            </tr>
-            <tr>
-                <td class="top25a">20. </td>
-                <td class="top25a">Michigan State</td>
-                <td class="top25a">3-0</td>
-                <td class="top25a">NR</td>
-            </tr>
-            <tr>
-                <td class="top25b">21. </td>
-                <td class="top25b">North Carolina</td>
-                <td class="top25b">2-1</td>
-                <td class="top25b">21</td>
-            </tr>
-            <tr>
-                <td class="top25a">22. </td>
-                <td class="top25a">Fresno State</td>
-                <td class="top25a">3-1</td>
-                <td class="top25a">NR</td>
-            </tr>
-            <tr>
-                <td class="top25b">23. </td>
-                <td class="top25b">Auburn</td>
-                <td class="top25b">2-1</td>
-                <td class="top25b">22</td>
-            </tr>
-            <tr>
-                <td class="top25a">24. </td>
-                <td class="top25a">UCLS</td>
-                <td class="top25a">2-1</td>
-                <td class="top25a">13</td>
-            </tr>
-            <tr>
-                <td class="top25b">25. </td>
-                <td class="top25b">Kansas State</td>
-                <td class="top25b">3-0</td>
-                <td class="top25b">NR</td>
-            </tr>
-        </table>
-    
     </div>
-
-
+    <div id="NBA">
     </div>
     <footer class="social-footer">
         <div class="container">
             <div class="github-link">
-                <a class="github" href="https://github.com/natebennett1/creative-project1" style="color: black"; >Github Repository - Nate Bennett & Dillon Ormond</a>
+                <a class="github" href="https://github.com/natebennett1/creative-project1" style="color: black" ;>Github Repository - Nate Bennett & Dillon Ormond</a>
             </div>
             <!-- <div class="row">
                 <div class="col-lg">
@@ -217,6 +54,9 @@
             </div> -->
         </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
+    <script text="type/javascript" src="/script.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
