--- a/index.html
+++ b/index.html
@@ -9,26 +9,27 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <nav class="navbar navbar-expand navbar-light py-md-4" style="background-color: #93b3e6; font-family: Courier; color: white ">
-        <a class="navbar-brand" href="index.html">D&N Football Reference</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">D&N Sports Reference</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="positions.html">Positions <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="leaders.html">Stat Leaders</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="teams.html">Teams</a>
-                </li>
-            </ul>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="positions.html">Positions <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="teams.html">Teams</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="leaders.html">Stat Leaders</a>
+              </li>
+
         </div>
-    </nav>
-    <div display='flex' ; flex-direction='row'>
+      </nav>
+    <!-- <div display='flex' ; flex-direction='row';> -->
         <img class="landscape" src="images/stadium2.jpg">
         <h1>Your one stop shop for all your statistical needs</h1>
 
